crates/taskfleet/tests/snapshots/envelope_snapshots__run_create_dry_run_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "dir": "[HOME]/runs/[RUN_ID]",
    "supervisor": "not-spawned-dry-run",
    "kind": "research",
    "lifecycle": "autonomous",
    "dry_run": true,
    "selection": "legacy-unrecorded"
  },
  "warnings": []
}
