crates/taskfleet/tests/snapshots/envelope_snapshots__run_create_idempotent_replay_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "dir": "[HOME]/runs/[RUN_ID]",
    "supervisor": "recorded-on-prior-run",
    "kind": "spinoff",
    "lifecycle": "autonomous",
    "idempotent_replay": true,
    "selection": "legacy-unrecorded"
  },
  "warnings": []
}
