crates/taskfleet/tests/snapshots/envelope_snapshots__run_create_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 234
expression: value
---
run-id: [RUN_ID]
dir:    [HOME]/runs/[RUN_ID]
kind:   spinoff
profile: builtin (source builtin-harness, autonomous)
requested-harness: pi
agent:   candidate 0 / pi
status: pending  (supervisor: delegated-to-parent-supervisor)
