crates/taskfleet/tests/snapshots/envelope_snapshots__run_show_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "kind": "spinoff",
    "lifecycle": "autonomous",
    "status": "pending",
    "title": "seed-run",
    "created_at": "[TS]",
    "source_branch": null,
    "worktree_path": "/tmp/seed-wt",
    "harness": "pi",
    "node_count": 1,
    "supervisor": {
      "pid": null,
      "state": "not-recorded",
      "alive": false
    },
    "stalled": false,
    "stillborn": false,
    "attention_required": false,
    "awaiting_input": false,
    "open_discussion_count": 0,
    "telemetry_available": true,
    "telemetry_counts": {
      "absent": 1,
      "current": 0,
      "stale": 0,
      "clock_unreliable": 0,
      "invalid": 0
    },
    "manifest": {
      "schema_version": 1,
      "run_id": "[RUN_ID]",
      "kind": "spinoff",
      "lifecycle": "autonomous",
      "title": "seed-run",
      "status": "pending",
      "created_at": "[TS]",
      "updated_at": "[TS]",
      "source_repo": null,
      "source_branch": null,
      "worktree_root": null,
      "harness": "pi",
      "selection": "legacy-unrecorded",
      "node_count": 1,
      "parent_run_id": null,
      "parent_node_id": null
    },
    "counts": {
      "nodes": 1
    },
    "telemetry": [
      {
        "node_id": "n-0001",
        "requirement": "required",
        "support": "unsupported",
        "sample": "absent"
      }
    ],
    "landed": false,
    "landed_method": "unverified",
    "report": null
  },
  "warnings": []
}
