crates/taskfleet/tests/snapshots/envelope_snapshots__run_show_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 234
expression: value
---
run-id:        [RUN_ID]
title:         seed-run
status:        pending
landed:        false (unverified)
kind:          spinoff
lifecycle:     autonomous
profile:       builtin (source builtin-harness, autonomous)
requested-harness: pi
agent:         candidate 0 / pi
created_at:    [TS]
updated_at:    [TS]
nodes:         1
telemetry:     n-0001: telemetry absent (requirement required, support configured); run status unchanged
supervisor:    (none recorded)
